deploy: 9d80a27c935d0cab3a17ec97901fd954e2c0ad51

--- a/350z-and-missouri-safety-and-emissions-tests.html
+++ b/350z-and-missouri-safety-and-emissions-tests.html
@@ -314,7 +314,7 @@
 												background-image: none;
 											"
 											alt="image"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/dfc33fa77b34_14347/image_thumb.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/dfc33fa77b34_14347/image_thumb.png"
 											width="100%"
 										/>
 									</p>
