--- a/350z-at-the-wilmington-summer-and-blytheville-prosolo.html
+++ b/350z-at-the-wilmington-summer-and-blytheville-prosolo.html
@@ -304,11 +304,11 @@
 									<!-- End Toc -->
 									<p>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Wilmin_12D77/P350z-July2016_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Wilmin_12D77/P350z-July2016_2.jpg"
 											><img
 												alt="P350z-July2016"
 												border="0"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Wilmin_12D77/P350z-July2016_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Wilmin_12D77/P350z-July2016_thumb.jpg"
 												style="
 													border-left-width: 0px;
 													border-right-width: 0px;
