--- a/350z-tire/wheel-fitment-18x10-inch-305-v710s.html
+++ b/350z-tire/wheel-fitment-18x10-inch-305-v710s.html
@@ -380,7 +380,7 @@
 													href="http://www.youtube.com/watch?v=H8k8JKzFKi0&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/350z-TireWheel-Fitment-18x10-inch-305-V7_12F01/videof109fe64de38.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/350z-TireWheel-Fitment-18x10-inch-305-V7_12F01/videof109fe64de38.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;111ad043-a21a-43a3-a8fc-58803d989567&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"697\" height=\"392\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/H8k8JKzFKi0?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/H8k8JKzFKi0?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"697\" height=\"392\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
