--- a/350z-with-xxr-531-18x11.html
+++ b/350z-with-xxr-531-18x11.html
@@ -304,7 +304,7 @@
 										"
 										border="0"
 										alt="image"
-										src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/350z-with-XXR-531-18x11_14E16/image_thumb.png"
+										src="/assets/images/PublishThumbnails/Windows-Live-Writer/350z-with-XXR-531-18x11_14E16/image_thumb.png"
 										width="414"
 										align="right"
 										height="371"
