--- a/autocross-video-from-norcalufo-1/30/11.html
+++ b/autocross-video-from-norcalufo-1/30/11.html
@@ -376,7 +376,7 @@
 													href="http://www.youtube.com/watch?v=zjCFiWwO6GA&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/videoce295b8c8fbb.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/videoce295b8c8fbb.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;9543b44a-b7f4-41e7-a478-acbcdd1022ac&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"734\" height=\"411\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/zjCFiWwO6GA?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/zjCFiWwO6GA?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"734\" height=\"411\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -428,7 +428,7 @@
 													href="http://www.youtube.com/watch?v=3Xq9NICjUJA&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/video30047205e2eb.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/video30047205e2eb.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;547183ec-da84-40d3-9d85-bbe055fd40b1&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"733\" height=\"412\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/3Xq9NICjUJA?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/3Xq9NICjUJA?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"733\" height=\"412\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -474,7 +474,7 @@
 													href="http://www.youtube.com/watch?v=59p2nYz4qj0&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/video885c646ae156.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/Autocross-Video-from-13011_13493/video885c646ae156.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;aaf05418-8f8c-4936-b3d6-be96430fa35b&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"729\" height=\"409\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/59p2nYz4qj0?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/59p2nYz4qj0?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"729\" height=\"409\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
