--- a/back-in-the-saddle-again.html
+++ b/back-in-the-saddle-again.html
@@ -319,7 +319,7 @@
 											"
 											class="wlEmoticon wlEmoticon-openmouthedsmile"
 											alt="Open-mouthed smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Back-in-the-saddle-again_14998/wlEmoticon-openmouthedsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Back-in-the-saddle-again_14998/wlEmoticon-openmouthedsmile_2.png"
 										/>
 										I little antiquated, but the process over all worked out.
 										Computers can definitely make things more efficient, but
@@ -350,7 +350,7 @@
 											"
 											class="wlEmoticon wlEmoticon-openmouthedsmile"
 											alt="Open-mouthed smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Back-in-the-saddle-again_14998/wlEmoticon-openmouthedsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Back-in-the-saddle-again_14998/wlEmoticon-openmouthedsmile_2.png"
 										/>
 									</p>
 
