--- a/el-toro-prosolo-day-1.html
+++ b/el-toro-prosolo-day-1.html
@@ -302,7 +302,7 @@
 											"
 											class="wlEmoticon wlEmoticon-openmouthedsmile"
 											alt="Open-mouthed smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-openmouthedsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-openmouthedsmile_2.png"
 										/>
 									</p>
 
@@ -319,7 +319,7 @@
 											"
 											class="wlEmoticon wlEmoticon-smile"
 											alt="Smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-smile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/086ec53de232_13331/wlEmoticon-smile_2.png"
 										/>
 										With the contingency available that would mean a set of
 										tires.
