--- a/how-to-drop-40lbs-from-your-2003-350z-new-seats.html
+++ b/how-to-drop-40lbs-from-your-2003-350z-new-seats.html
@@ -363,7 +363,7 @@
 
 									<p>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/SeatsinBags_2.jpg"
+											href="/assets/images/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/SeatsinBags_2.jpg"
 											target="_blank"
 											><img
 												title="SeatsinBags"
@@ -378,7 +378,7 @@
 													background-image: none;
 												"
 												alt="SeatsinBags"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/SeatsinBags_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/SeatsinBags_thumb.jpg"
 												width="244"
 												align="right"
 												height="184" /></a
@@ -508,7 +508,7 @@
 									<h3>Seat Height</h3>
 									<p>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/2016-02-28%2016.45.43_2.jpg"
+											href="/assets/images/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/2016-02-28%2016.45.43_2.jpg"
 											target="_blank"
 											><img
 												title="NRG FRP-310 Seat installed in 350z"
@@ -524,7 +524,7 @@
 												"
 												align="right"
 												alt="NRG FRP-310 Seat installed in 350z"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/2016-02-28%2016.45.43_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Windows-Live-Writer/How-to-drop-40lbs-from-your-2003-350z-ne_1297A/2016-02-28%2016.45.43_thumb.jpg"
 												width="244"
 												height="184" /></a
 										>The one thing I didn&rsquo;t test, is how the seats will do
