--- a/introducing-project350z-v3.html
+++ b/introducing-project350z-v3.html
@@ -302,7 +302,7 @@
 												background-image: none;
 											"
 											alt="image"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Introducing-Project350z-V3_14AF6/image_thumb_1.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Introducing-Project350z-V3_14AF6/image_thumb_1.png"
 											width="100%"
 										/>
 									</p>
