--- a/let-there-be-sound-and-im-going-to-nationals-not-in-the-350z.html
+++ b/let-there-be-sound-and-im-going-to-nationals-not-in-the-350z.html
@@ -352,7 +352,7 @@
 											"
 											class="wlEmoticon wlEmoticon-devil"
 											alt="Devil"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Let-there-be-sound-and-Im-going-to-Natio_12F6A/wlEmoticon-devil_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Let-there-be-sound-and-Im-going-to-Natio_12F6A/wlEmoticon-devil_2.png"
 										/>, he’s still a friend of mine
 										<img
 											style="
@@ -363,7 +363,7 @@
 											"
 											class="wlEmoticon wlEmoticon-openmouthedsmile"
 											alt="Open-mouthed smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Let-there-be-sound-and-Im-going-to-Natio_12F6A/wlEmoticon-openmouthedsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Let-there-be-sound-and-Im-going-to-Natio_12F6A/wlEmoticon-openmouthedsmile_2.png"
 										/>
 									</p>
 									<iframe
