--- a/nope-those-lug-nuts-wont-fit.html
+++ b/nope-those-lug-nuts-wont-fit.html
@@ -322,7 +322,7 @@
 											"
 											class="wlEmoticon wlEmoticon-sadsmile"
 											alt="Sad smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/62ecb0783f7c_127C9/wlEmoticon-sadsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/62ecb0783f7c_127C9/wlEmoticon-sadsmile_2.png"
 										/>
 									</p>
 
