--- a/our-first-california-autocross-with-video-and-photos.html
+++ b/our-first-california-autocross-with-video-and-photos.html
@@ -371,7 +371,7 @@
 													href="http://www.youtube.com/watch?v=95ItS4Shce8&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/WindowsLiveWriter/278347fa8f0f_12E23/video136b409b2f0b.jpg"
+														src="/assets/images/PublishThumbnails/WindowsLiveWriter/278347fa8f0f_12E23/video136b409b2f0b.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;5f8278a9-5e8d-4d61-a6e1-77d885b857cd&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"425\" height=\"355\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/95ItS4Shce8&amp;hl=en\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/95ItS4Shce8&amp;hl=en\" type=\"application/x-shockwave-flash\" width=\"425\" height=\"355\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -410,7 +410,7 @@
 													href="http://www.youtube.com/watch?v=oW3_lPi4I_0&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/WindowsLiveWriter/278347fa8f0f_12E23/video0a8f90584a83.jpg"
+														src="/assets/images/PublishThumbnails/WindowsLiveWriter/278347fa8f0f_12E23/video0a8f90584a83.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;a87855b8-892a-486c-9ad7-b21b6a493e75&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"425\" height=\"355\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/oW3_lPi4I_0&amp;hl=en\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/oW3_lPi4I_0&amp;hl=en\" type=\"application/x-shockwave-flash\" width=\"425\" height=\"355\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
