--- a/race-tire-mounting-in-the-san-francisco-bay-area-peninsula.html
+++ b/race-tire-mounting-in-the-san-francisco-bay-area-peninsula.html
@@ -346,7 +346,7 @@
 											"
 											class="wlEmoticon wlEmoticon-smile"
 											alt="Smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/38c1eaeeaf3c_1076/wlEmoticon-smile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/38c1eaeeaf3c_1076/wlEmoticon-smile_2.png"
 										/>
 									</p>
 
