--- a/san-diego-national-tour-autocross-runs.html
+++ b/san-diego-national-tour-autocross-runs.html
@@ -348,7 +348,7 @@
 													href="http://www.youtube.com/watch?v=SjEFwHh5Kvo&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/video69585237a082.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/video69585237a082.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;4033e473-f663-48e6-9ad2-fb09fdd44d45&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/SjEFwHh5Kvo?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/SjEFwHh5Kvo?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -398,7 +398,7 @@
 													href="http://www.youtube.com/watch?v=wZAIHhQ1Ey4&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/videof56200a0b6e1.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/videof56200a0b6e1.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;e96fab62-9840-4c60-94b2-213fa8d79868&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/wZAIHhQ1Ey4?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/wZAIHhQ1Ey4?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -447,7 +447,7 @@
 													href="http://www.youtube.com/watch?v=KiSRmdGdssY&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/videod42a7b6db430.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Autocross-Runs_12C00/videod42a7b6db430.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;03afd1d1-3b02-45de-b6a8-9a43cc012375&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/KiSRmdGdssY?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/KiSRmdGdssY?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
