--- a/san-diego-national-tour-practice-day.html
+++ b/san-diego-national-tour-practice-day.html
@@ -325,7 +325,7 @@
 											"
 											class="wlEmoticon wlEmoticon-openmouthedsmile"
 											alt="Open-mouthed smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Practice-Day_12E28/wlEmoticon-openmouthedsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/San-Diego-National-Tour-Practice-Day_12E28/wlEmoticon-openmouthedsmile_2.png"
 										/>. He assumed I knew about suspension setup, I corrected
 										him, and asked for help! He was very helpful and provided me
 										some guidance to try things out.
