--- a/success-the-bushings-are-removed-from-the-upper-control-arms.html
+++ b/success-the-bushings-are-removed-from-the-upper-control-arms.html
@@ -389,7 +389,7 @@
 													href="http://www.youtube.com/watch?v=4iCU_LXcA98&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/cf9a9423567a_14216/videobae10aba151f.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/cf9a9423567a_14216/videobae10aba151f.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;1ceff0e3-0270-469a-bdc2-60183f096edd&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/4iCU_LXcA98?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/4iCU_LXcA98?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
