--- a/the-2016-autocross-season-so-far.html
+++ b/the-2016-autocross-season-so-far.html
@@ -501,7 +501,7 @@
 
 									<p>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_2.png"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_2.png"
 										>
 											<img
 												title="image"
@@ -521,7 +521,7 @@
 												"
 												border="0"
 												alt="image"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_thumb.png"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/The-2016-Autocross-Season-So-Far_137CF/image_thumb.png"
 												width="244"
 												height="244"
 											/>
