--- a/the-350z-goes-on-a-diet.html
+++ b/the-350z-goes-on-a-diet.html
@@ -376,7 +376,7 @@
 													href="http://www.youtube.com/watch?v=GGqoF9s0djQ&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/The-350z-goes-on-a-Diet_12F66/videoc902b241d5d3.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/The-350z-goes-on-a-Diet_12F66/videoc902b241d5d3.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;64bd917b-9b78-426d-b119-19a4b59e16c1&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/GGqoF9s0djQ?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/GGqoF9s0djQ?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
