--- a/tracking-down-no-fm-reception-in-a-2003-350z-pioneer-avh-x3700bhs.html
+++ b/tracking-down-no-fm-reception-in-a-2003-350z-pioneer-avh-x3700bhs.html
@@ -317,7 +317,7 @@
 												background-image: none;
 											"
 											alt="image"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Tracking-down-no-FM-reception-in-a-2003-_13A5C/image_thumb.png"
+											src="/assets/images/PublishThumbnails/Open-Live-Writer/Tracking-down-no-FM-reception-in-a-2003-_13A5C/image_thumb.png"
 											width="100%"
 										/>
 									</p>
