--- a/videos-from-aas-round-8.html
+++ b/videos-from-aas-round-8.html
@@ -327,7 +327,7 @@
 													href="http://www.youtube.com/watch?v=oaOHuYZOKVY&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/video2a72ba20a731.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/video2a72ba20a731.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;604b061d-43fe-481e-94d2-4f5d8f6dc450&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/oaOHuYZOKVY?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/oaOHuYZOKVY?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -361,7 +361,7 @@
 													href="http://www.youtube.com/watch?v=O34lVmvTsIo&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videof2bb73f35c7d.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videof2bb73f35c7d.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;bf52e879-c3d7-4885-946e-d0855a1dc8e2&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/O34lVmvTsIo?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/O34lVmvTsIo?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -395,7 +395,7 @@
 													href="http://www.youtube.com/watch?v=wfBU7Y8qr5c&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videof74ef842cd10.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videof74ef842cd10.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;9a9a4e86-0e13-4342-8e57-3248eaa56eb9&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/wfBU7Y8qr5c?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/wfBU7Y8qr5c?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -429,7 +429,7 @@
 													href="http://www.youtube.com/watch?v=PUXzOpd_zNk&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videoeef81d4a713f.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/videoeef81d4a713f.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;4c6cc0a6-c41f-4da8-812e-0f32d467a122&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/PUXzOpd_zNk?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/PUXzOpd_zNk?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
@@ -463,7 +463,7 @@
 													href="http://www.youtube.com/watch?v=8_3--W34ZxA&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/video48f5a8bfcf8d.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/aa8a8ef8fc27_1307B/video48f5a8bfcf8d.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;e2fabe59-9342-4e4a-8f3d-4ad5a116f390&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/8_3--W34ZxA?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/8_3--W34ZxA?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
