--- a/weekend-progress-on-the-350z.html
+++ b/weekend-progress-on-the-350z.html
@@ -368,7 +368,7 @@
 									<p>&nbsp;</p>
 									<div id="blogImages">
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_2.jpg"
 										>
 											<img
 												title="350z Parts before Unboxing"
@@ -382,13 +382,13 @@
 													background-image: none;
 												"
 												alt="350z Parts before Unboxing"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2011.29.47_thumb.jpg"
 												width="244"
 												height="184"
 											/>
 										</a>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_2.jpg"
 										>
 											<img
 												title="350z Splash Guard Installed"
@@ -402,13 +402,13 @@
 													background-image: none;
 												"
 												alt="350z Splash Guard Installed"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2019.51.37_thumb.jpg"
 												width="244"
 												height="184"
 											/>
 										</a>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_2.jpg"
 										>
 											<img
 												title="Lower intake manifold"
@@ -422,13 +422,13 @@
 													background-image: none;
 												"
 												alt="Lower intake manifold"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2020.38.07_thumb.jpg"
 												width="244"
 												height="184"
 											/>
 										</a>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_2.jpg"
 										>
 											<img
 												title="Lower intake manifold after cleaning"
@@ -442,13 +442,13 @@
 													background-image: none;
 												"
 												alt="Lower intake manifold after cleaning"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-05%2021.33.33_thumb.jpg"
 												width="244"
 												height="184"
 											/>
 										</a>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_2.jpg"
 										>
 											<img
 												title="Strut tower bar getting plexidipped"
@@ -462,13 +462,13 @@
 													background-image: none;
 												"
 												alt="Strut tower bar getting plexidipped"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.37.40_thumb.jpg"
 												width="244"
 												height="184"
 											/>
 										</a>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_2.jpg"
+											href="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_2.jpg"
 										>
 											<img
 												title="Strut tower bar installed after getting plexidipped"
@@ -482,7 +482,7 @@
 													background-image: none;
 												"
 												alt="Strut tower bar installed after getting plexidipped"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Open-Live-Writer/Weekend-progress-on-the-350z_140A7/2016-03-06%2018.54.30_thumb.jpg"
 												width="244"
 												height="184"
 											/>
