--- a/buy-a-motor-to-build-up.html
+++ b/buy-a-motor-to-build-up.html
@@ -316,7 +316,7 @@
 											"
 											class="wlEmoticon wlEmoticon-smile"
 											alt="Smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Buy-a-motor-to-build-up_14372/wlEmoticon-smile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Buy-a-motor-to-build-up_14372/wlEmoticon-smile_2.png"
 										/>
 									</p>
 
