--- a/missouri-safety-inspection-exhaust-hole-fail.html
+++ b/missouri-safety-inspection-exhaust-hole-fail.html
@@ -314,7 +314,7 @@
 												background-image: none;
 											"
 											alt="image"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/Missouri-Safety-inspection-exhaust-hole-_14613/image_thumb.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/Missouri-Safety-inspection-exhaust-hole-_14613/image_thumb.png"
 											width="100%"
 										/>
 									</p>
