--- a/my-gopro-hd-died.html
+++ b/my-gopro-hd-died.html
@@ -325,7 +325,7 @@
 													href="http://www.youtube.com/watch?v=b1R0bxm03rA&amp;feature=youtube_gdata_player"
 													target="_new"
 													><img
-														src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/87fd497cae94_13048/videof60072728bed.jpg"
+														src="/assets/images/PublishThumbnails/Windows-Live-Writer/87fd497cae94_13048/videof60072728bed.jpg"
 														style="border-style: none"
 														galleryimg="no"
 														onload='var downlevelDiv = document.getElementById(&apos;2e9399bb-6f31-41c9-b45c-d2b196997456&apos;); downlevelDiv.innerHTML = "&lt;div&gt;&lt;object width=\"448\" height=\"252\"&gt;&lt;param name=\"movie\" value=\"http://www.youtube.com/v/b1R0bxm03rA?hl=en&amp;hd=1\"&gt;&lt;\/param&gt;&lt;embed src=\"http://www.youtube.com/v/b1R0bxm03rA?hl=en&amp;hd=1\" type=\"application/x-shockwave-flash\" width=\"448\" height=\"252\"&gt;&lt;\/embed&gt;&lt;\/object&gt;&lt;\/div&gt;";'
