--- a/sfrscca-divisional-2011-day-1.html
+++ b/sfrscca-divisional-2011-day-1.html
@@ -319,7 +319,7 @@
 											"
 											class="wlEmoticon wlEmoticon-sadsmile"
 											alt="Sad smile"
-											src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/SFRSCCA-Divisional-2011-Day-1_10487/wlEmoticon-sadsmile_2.png"
+											src="/assets/images/PublishThumbnails/Windows-Live-Writer/SFRSCCA-Divisional-2011-Day-1_10487/wlEmoticon-sadsmile_2.png"
 										/>
 									</p>
 
