--- a/washing-waxing-and-then-cleaning-350z-headlights.html
+++ b/washing-waxing-and-then-cleaning-350z-headlights.html
@@ -319,7 +319,7 @@
 													background-image: none;
 												"
 												alt="Headlight-progress"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_thumb.jpg"
+												src="/assets/images/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_thumb.jpg"
 												width="100%" /></a
 										>This weekend, being what is likely the last warm weekend of
 										2015, I decided it was time to wash/claybar/wax the 350z.
@@ -432,7 +432,7 @@
 
 									<p>
 										<a
-											href="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_4.jpg"
+											href="/assets/images/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_4.jpg"
 											><img
 												title="Headlight-progress"
 												style="
@@ -448,7 +448,7 @@
 													background-image: none;
 												"
 												alt="Headlight-progress"
-												src="http://www.project350z.com/Portals/4/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_thumb_1.jpg"
+												src="/assets/images/PublishThumbnails/Windows-Live-Writer/1c3584c943ab_12BEC/Headlight-progress_thumb_1.jpg"
 												width="751"
 												height="241"
 										/></a>
