--- a/_posts/2009-11-28-2011-autocross-schedule.html
+++ b/_posts/2009-11-28-2011-autocross-schedule.html
@@ -7,6 +7,7 @@ image:
 categories:
 redirect_from: 
     - "/Articles/itemId/455/2011-Autocross-Schedule"
+    - "/Articles/itemId/455/Autocross-Schedule"
 ---
 <p><strong>Tentative Schedule</strong></p>
 
