deploy: 5ebe09a8a020dd2cd3d6f0bc4099af04eddcdc07

--- a/about.html
+++ b/about.html
@@ -213,29 +213,29 @@
 
 						<div class="article-post">
 							<p>
-								Project350z.com was originally about a boy and his toy.
-								Originally picked up from a friend in Farmington, Missouri on
-								May 7th, 2006, the car spent almost 4 years with Chris Hammond.
-								He got it running with a turbo motor from a 280z, and then blew
-								that motor up on its first autocross run.
+								Project350z.com was originally about a boy and his toy. The
+								first was a 2003 350z Enthusiast Package. That car was
+								campaigned for 3 years and then sold to a Dozzle in Kansas City
+								(he still owns it and won’t sell it back).
 							</p>
 
 							<p>
-								Eventually Chris and his wife moved to Colorado, then on to
-								California. The car was sold in Colorado.
+								The second was a 2004 Enthusiast. Picked up in Colorado in
+								January 2010, it travelled to California and spent 2 years there
+								before being sold.
 							</p>
 
 							<p>
-								This website was used to track the progress of the build. The
-								website is kept around for archival purposes, and with hopes
-								that one day Chris will own another Datsun 240z.
+								The third was a 2003 Touring that was acquired in 2006. That
+								only stuck around 2 years before making its way to Florida, and
+								then recently on to Colorado.
 							</p>
 
+							<p>What will the 4th be? Who knows.</p>
+
 							<p>
-								Chris also has
-								<a href="https://www.project350z.com">Project350z.com</a> and
-								Project370z/Project400z with hopes that one day both of those
-								websites have a vehicle as well.
+								The current car can be found over on
+								<a href="https://www.specfrs.com/">SpecFRS.com</a>
 							</p>
 						</div>
 					</section>
